fix broken css, functions

--- a/Main_Page/src/sass/user.scss
+++ b/Main_Page/src/sass/user.scss
@@ -27,6 +27,7 @@
 
 .nav {
   position: fixed;
+  width: 100%;
   z-index: 1;
   background-color: white;
   top: 0;
